[project]
name = "tor-anonymizer"
version = "2.0"
description = "Professional privacy tool for advanced anonymization and IP rotation"
authors = [
    {name = "root-shost", email = "wilbursmith53@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "psutil>=5.9.0"
]

[project.scripts]
tor-anonymizer = "src.tor_anonymizer:main"

[project.urls]
Homepage = "https://github.com/root-shost/tor-anonymizer"
Repository = "https://github.com/root-shost/tor-anonymizer"
"Bug Reports" = "https://github.com/root-shost/tor-anonymizer/issues"
